[package]
name = "macroquad_font_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.6"
macroquad = { version = "0.3", default-features = false }

[dev-dependencies]
macroquad = { version = "0.3", default-features = false }