[package]
name = "macroquad-text"
version = "0.1.1"
edition = "2021"
description = "A Simple way to draw text in macroquad with support of using glyphs from multiple fonts in a single draw_text call, also known as fallback fonts"
authors = ["Ricky12Awesome"]
readme = "README.md"
license = "MIT"
categories = ["graphics", "gui", "rendering"]
homepage = "https://github.com/Ricky12Awesome/macroquad-text"
repository = "https://github.com/Ricky12Awesome/macroquad-text"
exclude = ["assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.6"
macroquad = { version = "0.3", default-features = false }

[dev-dependencies]
macroquad = { version = "0.3", default-features = false }